--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Netlify-test-other-branch</title>
 </head>
 <body>
-  <h1>This is the header for branch stan-1-branch</h1>
+  <h1>This is the header for branch stan-1-branch. Okey, now this is the actual branch</h1>
 </body>
 </html>
