updated, added css and js

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Netlify-test-other-branch</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>This is the header for branch stan-1-branch. Okey, now this is the actual branch</h1>
+  <h1>This is the header for branch stan-1-branch. Okey, now this is the actual branch. Updated!</h1>
+  <script src="script.js"></script>
 </body>
 </html>
